调整项目目录

--- a/src/_02_model IO/04-提示词模板之ChatPromptTemplate.ipynb
+++ b/src/_02_model IO/04-提示词模板之ChatPromptTemplate.ipynb
@@ -403,8 +403,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-02T02:27:13.010277300Z",
-     "start_time": "2026-02-02T02:27:08.207321500Z"
+     "end_time": "2026-02-02T07:54:55.516314900Z",
+     "start_time": "2026-02-02T07:49:51.479077700Z"
     }
    },
    "cell_type": "code",
@@ -448,20 +448,22 @@
    "id": "a3345582ea71af51",
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E:\\shangdj\\python\\env\\conda\\envs\\myPython3.11\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='你刚才的问题是：**“1+2*3=？”**  \\n\\n答案是 **7**（按照运算顺序：先乘除后加减，所以先算 2×3=6，再加 1 得到 7）。' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 48, 'prompt_tokens': 34, 'total_tokens': 82, 'completion_tokens_details': None, 'prompt_tokens_details': {'audio_tokens': None, 'cached_tokens': 0}, 'prompt_cache_hit_tokens': 0, 'prompt_cache_miss_tokens': 34}, 'model_provider': 'openai', 'model_name': 'deepseek-chat', 'system_fingerprint': 'fp_eaab8d114b_prod0820_fp8_kvcache', 'id': '1095c0f1-3e39-4ccd-ae10-2e2bb5a82484', 'finish_reason': 'stop', 'logprobs': None} id='lc_run--019c1c2c-e559-7983-af56-7254cd04c6d8-0' tool_calls=[] invalid_tool_calls=[] usage_metadata={'input_tokens': 34, 'output_tokens': 48, 'total_tokens': 82, 'input_token_details': {'cache_read': 0}, 'output_token_details': {}}\n"
+      "content='你刚才的问题是：“1+2*3=？”' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 11, 'prompt_tokens': 34, 'total_tokens': 45, 'completion_tokens_details': None, 'prompt_tokens_details': {'audio_tokens': None, 'cached_tokens': 0}, 'prompt_cache_hit_tokens': 0, 'prompt_cache_miss_tokens': 34}, 'model_provider': 'openai', 'model_name': 'deepseek-chat', 'system_fingerprint': 'fp_eaab8d114b_prod0820_fp8_kvcache', 'id': 'bc21de7a-e94d-4c2e-9d8d-f16139981151', 'finish_reason': 'stop', 'logprobs': None} id='lc_run--019c1d54-6e77-7043-bd30-5fdf8ef59614-0' tool_calls=[] invalid_tool_calls=[] usage_metadata={'input_tokens': 34, 'output_tokens': 11, 'total_tokens': 45, 'input_token_details': {'cache_read': 0}, 'output_token_details': {}}\n"
      ]
     }
    ],
-   "execution_count": 2
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "",
-   "id": "557aec0c493b73db"
+   "execution_count": 1
   }
  ],
  "metadata": {
